src/Pages/cart/producto/Producto.module.css
.productoContainer {
  padding: 16px 140px;
}

.banner {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: flex-start;
  align-content: stretch;
  gap: 60px;

  margin: 20px 0;
  width: 100%;
}

.bannerLeft {
  width: 50%;
  height: 400px;
}

.productoImagen {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.title {
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  font-style: SemiBold;
  font-size: 1.9rem;
  line-height: 60px;
}

.descripcion {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 60px;
}

.categoria {
  margin: 20px 0;
  font-size: 0.8rem;
}

.cantidadContainer button {
  font-family: "Poppins", sans-serif;
  padding: 20px;
  border-radius: 8px;
  font-size: 20px;
  font-weight: 800;
  border: none;
  background-color: #f7f8fa;
}

.cantidadContainer button:hover {
  background-color: var(--primary-color);
  color: white;
  cursor: pointer;
  transition: background-color 0.9s ease;
}

.cantidadContainer input {
  width: 100px;
  padding: 22px;
  text-align: center;
  font-family: "Poppins", sans-serif;
  font-size: 20px;
  border: 1px solid #f7f8fa;
  border-radius: 4px;
  margin: 0 10px;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

button.addToCartButton {
  background-color: var(--primary-color);
  color: white;
  border: none;
  margin-left: 20px;
  padding: 15px 30px;
  border-radius: 8px;
  font-family: "Poppins", sans-serif;
  font-size: 18px;
  font-weight: 600;
  cursor: pointer;
}

.categoriaNombre {
  font-weight: 500;
  color: var(--primary-color);
}

.bannerRight {
  width: 100%;
  text-align: left;
}

.subtitle {
  margin-bottom: 10px;
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 36px;
  text-align: left;
}

.categoriaImagen {
  width: 100%;
  height: 200px;
  object-fit: contain;
}

.usosContainer {
  margin: 30px 0;
  text-align: left;
  font-size: 1rem;
}
/*TABLETS*/
@media (max-width: 767px) {
  .banner {
    flex-wrap: wrap;
    gap: 30px;
  }

  .bannerLeft {
    width: 100%;
    height: 320px;
  }

  .productoContainer {
    padding: 0;
    margin: 0 auto;
    width: 80%;
  }

  .cantidadContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
  }

  .cantidadContainer input {
    width: 2.5rem;
  }

  button.addToCartButton {
    margin-left: 0;
  }
}

